manifests/homepage/homepage-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
