manifests/homepage/homepage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: homepage
spec:
  parentRefs:
    - name: filebrowser-gateway
      namespace: filebrowser
      sectionName: home-https
  hostnames:
    - home.home.nipo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-homepage-to-filebrowser-gateway
  namespace: filebrowser
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: homepage
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
